--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -15,8 +15,8 @@
     <p> Esse projeto foi criado, pois é notório o grande índice de pobreza vivenciado na sociedade
     brasileira, além da desigualdade social que vem crescendo gradativamente na mesma. Nós acreditamos 
     que esse projeto é o primeiro passo para mudar esse quadro tão presente na vida de tantas pessoas, 
-    e assim, tornar a nossa sociedade mais igualitária, trabalhar atos de empatia e generosidade, e o 
-    mais importante, levar bem-estar e cuidados para a vida do próximo.</p>
+    e assim, tornar a nossa sociedade mais igualitária, trabalhando atos de empatia e generosidade, e o 
+    mais importante, levando bem-estar e cuidados para a vida do próximo.</p>
     <hr>
     </h1>
 
