--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -10,10 +10,16 @@
   <h1 class="sos"> Conheça um pouco mais sobre o SOS-DoeAgora :) </h1>
 
     <hr>
-    <p class="cd"> O SOS-DoeAgora é um projeto voltado à arrecadação de produtos de higiene pessoal,
-      como: Roupas, escovas de dente, entre outros produtos. Foi desenvolvido por duas estudantes
-      do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração
-      de um projeto integrador e de <br> um trabalho de TCC. </p>
+    <p class="cd"> "SOS-DoeAgora" foi criado com o objetivo de alcançar algumas pessoas que 
+      fazem parte da linha de pobreza social do nosso país. É extremamente observável a 
+      tamanha desigualdade presente na sociedade brasileira, e esse quadro vem aumentando gradativamente
+      a cada novo ano. Este site visa ajudar uma considerável parcela dessas pessoas e levar até 
+      elas menores preocupações em seu cotidiano, tendo em vista que muitas famílias deixam de comprar
+      uma roupa nova ou um desodorante, por exemplo, com o intuito de priorizar gastos com comida em seu 
+      cotidiano e sobreviver. Esse quadro é muito preocupante, e depende de nós tomarmos uma iniciativa 
+      e tentar tornar a vida dessas pessoas mais leve, mesmo com uma pequena ajuda, essas pessoas se 
+      sentirão felizes em ver que podem contar conosco para auxilia-las.  
+      </p>
 
     <h3 class="cd"> teste </h3>
 
