--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -122,9 +122,10 @@ body{
   .cd{
     color: white;
     width: 100%;
-    background: #00000094;
+    background: #000000b6;
     text-align: center;
     font-size: 130%;
+    font-family: OCR A Std, monospace; 
   
   }
   
