--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -6,49 +6,44 @@
 
 <head>
 
-
+<body>
   <h1 class="sos"> Conheça um pouco mais sobre o SOS-DoeAgora :) </h1>
 
-    <hr>
-    <p class="cd"> "SOS-DoeAgora" foi criado com o objetivo de alcançar algumas pessoas que 
-      fazem parte da linha de pobreza social do nosso país. É extremamente observável a 
-      tamanha desigualdade presente na sociedade brasileira, e esse quadro vem aumentando gradativamente
-      a cada novo ano. Este site visa ajudar uma considerável parcela dessas pessoas e levar até 
-      elas menores preocupações em seu cotidiano, tendo em vista que muitas famílias deixam de comprar
-      uma roupa nova ou um desodorante, por exemplo, com o intuito de priorizar gastos com comida em seu 
-      cotidiano e sobreviver. Esse quadro é muito preocupante, e depende de nós tomarmos uma iniciativa 
-      e tentar tornar a vida dessas pessoas mais leve, mesmo com uma pequena ajuda, essas pessoas se 
-      sentirão felizes em ver que podem contar conosco para auxilia-las.  
-      </p>
+  <hr>
+  <p class="cd"> "SOS-DoeAgora" foi criado com o objetivo de alcançar algumas pessoas que
+    fazem parte da linha de pobreza social do nosso país. É extremamente observável a
+    tamanha desigualdade presente na sociedade brasileira, e esse quadro vem aumentando gradativamente
+    a cada novo ano. Este site visa ajudar uma considerável parcela dessas pessoas e levar até
+    elas menores preocupações em seu cotidiano, tendo em vista que muitas famílias deixam de comprar
+    uma roupa nova ou um desodorante, por exemplo, com o intuito de priorizar gastos com comida em seu
+    cotidiano e sobreviver. Esse quadro é muito preocupante, e depende de nós tomarmos uma iniciativa
+    e tentar tornar a vida dessas pessoas mais leve, mesmo com uma pequena ajuda, essas pessoas se
+    sentirão felizes em ver que podem contar conosco para auxilia-las.
+  </p>
 
-    <h3 class="cd"> teste </h3>
-
-  
-    <p class="cd">Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba).
-      <br> Nos chamamos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática,
-      que é integrado ao ensino médio. Nós estamos cursando o último ano do ensino médio e esse site que
-      é o nosso TCC é o requisito principal para a conclusão do ensino médio.
-      Encontramos diversas dificuldades na trajetória de criação deste website e estamos muito
-      felizes por ter superado cada uma delas e finalmente ter concluído com grande êxito.</p>
-   
-
-    <h3 class="cd"> teste 2 </h3>
-
-    <p class="cd" > Acho que vocês se depararam com a seguinte pergunta: "Por que produtos de higiene pessoal?" <br>
-      Produtos de higiene pessoal são essenciais para a vida do ser humano, por proporcinar a sua higiene
-      e saúde. Muitas vezes pessoas não possuem condições necessárias para suprir essas necessidades e
-      em alguns casos viverem em condição de extrema pobreza como, por exemplo, pessoas que estão em
-      excassez de rua. <br> Mas não resolvemos desenvolver esse site apenas por essas questões, pois não
-      são apenas produtos de higiene pessoal. É a própria dignidade exercida por cada cidadão, pois tomar
-      um banho não é apenas um hábito, é trazer de volta a sua dignidade é <br>
-      o próprio bem estar. Um banho não é apenas uma rotina diária, não é apenas uma forma de proporcinar
-      a saúde individual de cada um, mas sim um ato de renovação que não limpa apenas nosso meio físico,
-      mas também o nosso meio espiritual. </p>
-    <hr>
+  <h3 class="cd"> Por Que Doação de Roupas e Produtos de Higiene Pessoal? </h3>
 
 
-  <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
+  <p class="cd"> Todos nós gostamos de andar bem vestidos não é mesmo? Adoramos comprar uma roupa nova
+    ou mudar nosso guarda-roupa de vez em quando, mas, a pergunta é: "E quem não possui a condição de 
+    comprar algo novo?". Estamos habitualmente acostumados a lidar com essas mudanças simples em nosso dia
+    a dia, mas não são todos que lidam com as mesmas mudanças que nós, não por escolha, mas por obrigação. 
+    Já os produtos de higiene pessoal, também são essenciais para a nossa vida, eles nos proporcionam
+    saúde, higiene e bem estar, mas, a pergunta é: "E quem não possui a condição de usufruir do mesmo
+    bem estar que estamos acostumados habitualmente?". Podemos citar, por exemplo, as pessoas que moram
+    nas ruas, como essas pessoas lidam com a sua higiene pessoal diária? 
+  <br> O SOS-DoeAgora não tem apenas o objetivo de solucionar as questões citadas acima, pois não são 
+  apenas roupas que estão sendo doadas ou produtos de higiene pessoal, mas estamos ajudando outras 
+  pessoas a possuir e conquitar a sua dignidade, dignidade esta que é dever de todo cidadão ou ser humano
+  possuir. Outro exemplo que podemos citar é um banho, sim! um banho. Ele não é apenas uma rotina diária, 
+  não é apenas uma forma de proporcinar a saúde individual de cada um, mas sim um ato de renovação 
+  que não limpa apenas nosso meio físico, mas também o nosso meio espiritual. </p>
+
+  <hr>
 
 
+  <p class="left"><a href="{% url " doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
+
+</body>
 
 </html>
