--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -32,13 +32,13 @@
     saúde, higiene e bem estar, mas, a pergunta é: "E quem não possui a condição de usufruir do mesmo
     bem estar que estamos acostumados habitualmente?". Podemos citar, por exemplo, as pessoas que moram
     nas ruas, como essas pessoas lidam com a sua higiene pessoal diária? 
-  <br> O SOS-DoeAgora não tem apenas o objetivo de solucionar as questões citadas acima, pois não são 
-  apenas roupas que estão sendo doadas ou produtos de higiene pessoal, mas estamos ajudando outras 
-  pessoas a possuir e conquitar a sua dignidade, dignidade esta que é dever de todo cidadão ou ser humano
-  possuir. Outro exemplo que podemos citar é um banho, sim! um banho. Ele não é apenas uma rotina diária, 
-  não é apenas uma forma de proporcinar a saúde individual de cada um, mas sim um ato de renovação 
-  que não limpa apenas nosso meio físico, mas também o nosso meio espiritual. </p>
-  <br> E agora? O que está esperando para doar? 
+    <br> O SOS-DoeAgora não tem apenas o objetivo de solucionar as questões citadas acima, pois não são 
+    apenas roupas que estão sendo doadas ou produtos de higiene pessoal, mas estamos ajudando outras 
+    pessoas a possuir e conquitar a sua dignidade, dignidade esta que é dever de todo cidadão ou ser humano
+    possuir. Outro exemplo que podemos citar é um banho, sim! um banho. Ele não é apenas uma rotina diária, 
+    não é apenas uma forma de proporcinar a saúde individual de cada um, mas sim um ato de renovação 
+    que não limpa apenas nosso meio físico, mas também o nosso meio espiritual. 
+  <br> E agora? O que está esperando para doar? </p>
 
   <hr>
 
