--- a/doeagora/templates/doeagora/dpsdologin.html
+++ b/doeagora/templates/doeagora/dpsdologin.html
@@ -8,13 +8,16 @@
     <h1 class="sos">SOS-DoeAgora</h1>
 
     <h3> 
+      <hr>
       <p>
         <a href="{% url "doeagora:listagem" %}" class="link1"> Listagem </a><br>
-      <p> 
-      <a href="{% url "doeagora:index" %}" class="link1"> Volte aqui para página inicial </a><br>
-      
+      <p>
+      <hr> 
+        <a href="{% url "doeagora:doacao" %}" class="link1"> Doações </a><br>
       </p>
     </h3>
+<a href="{% url "doeagora:index" %}" class="link1"> Volte aqui para página inicial </a><br>
+      
     
   </body>
 </html>
