--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -21,6 +21,19 @@
       <p>Beneficiários: </p>
       <p><a href="{% url "doeagora:verlistagembeneficiario" %}" class="link2"> Ver beneficiários participantes </a><br></p>
     <hr>
+
+    <hr>
+
+    <p>Doação para Beneficiários: </p>
+    <p><a href="{% url "doeagora:verlistagemdoacaobeneficiario" %}" class="link2"> Ver doações para beneficiários </a><br></p>
+    <hr>
+
+    <hr>
+
+    <p>Produtos que os Beneficiários tem interesse: </p>
+    <p><a href="{% url "doeagora:verlistageminteresse %}" class="link2"> Ver interesses </a><br></p>
+    <hr>
+
     
     </h2>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
