--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -31,7 +31,7 @@
     <hr>
 
     <p>Produtos que os Beneficiários tem interesse: </p>
-    <p><a href="{% url "doeagora:verlistageminteresse %}" class="link2"> Ver interesses </a><br></p>
+    <p><a href="{% url "doeagora:verlistagemdeinteresse %}" class="link2"> Ver interesses </a><br></p>
     <hr>
 
     
