--- a/doeagora/templates/doeagora/verlistagemdoacaobeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagemdoacaobeneficiario.html
@@ -1,1 +1,18 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}"> 
+   <script src="script.js"></script>
+  <head>
+  <body>
+    <h1 class="sos">SOS-Doe Agora</h1>
 
+    <h3 class="cd">
+
+  {% for beneficiario in beneficiarios %}
+  <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}" class= "link2">{{ beneficiario }}</a></p>
+  {% endfor %}
+    </h3>
+
+<p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
