--- a/doeagora/templates/doeagora/verlistageminteresse.html
+++ b/doeagora/templates/doeagora/verlistageminteresse.html
@@ -5,12 +5,12 @@
    <script src="script.js"></script>
   <head>
   <body>
-    <h1 class="listagens">SOS-Doe Agora</h1>
+    <h1 class="sos">SOS-Doe Agora</h1>
 
     <h3 class="cd">
 
-  {% for interesse in interesses %}
-  <p><a href="{% url 'doeagora:ver_interesse'  interesse.pk %}" class= "link2">{{ interesse }}</a></p>
+  {% for beneficiario in beneficiarios %}
+  <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}" class= "link2">{{ beneficiario }}</a></p>
   {% endfor %}
     </h3>
 
