--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -16,8 +16,11 @@
 
     <p>Se Você é um benefeciário, ou seja, é aquele que irá receber as doações, clique aqui: </p>
     <p><a href="{% url "doeagora:c.beneficiario" %}" class="link2"> Cadastro de Beneficiários </a><br></p> 
-    <hr>
+  <hr>
 
+    <p>Se você é benefeciário e tem interesse em um tipo de produto específico, clique aqui: </p>
+    <p><a href="{% url "doeagora:interesse %}" class="link2"> Produtos específicos </a><br></p>
+  <hr>
 
     <p>Se Você é um doador, ou seja, é aquele que irá ajudar outras pessoas doando produtos, clique aqui: </p>
     <p><a href="{% url "doeagora:c.doadores" %}" class="link2"> Cadastro de Doadores </a><br></p>
