--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -19,7 +19,7 @@
   <hr>
 
     <p>Se você é benefeciário e tem interesse em um tipo de produto específico, clique aqui: </p>
-    <p><a href="{% url "doeagora:interesse_benef %}" class="link2"> Produtos específicos </a><br></p>
+    <p><a href="{% url "doeagora:interesse %}" class="link2"> Produtos específicos </a><br></p>
   <hr>
 
     <p>Se Você é um doador, ou seja, é aquele que irá ajudar outras pessoas doando produtos, clique aqui: </p>
