--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -28,6 +28,10 @@
     <p><a href="{% url "doeagora:verlistagemdoacaobeneficiario" %}" class="link2"> Ver doações para beneficiários </a><br></p>
     <hr>
     
+    <p>Doação para Beneficiários: </p>
+    <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link2"> interesses </a><br></p>
+    <hr>
+
     </h2>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
   </body>
