--- a/doeagora/templates/doeagora/verdoacaobeneficiario.html
+++ b/doeagora/templates/doeagora/verdoacaobeneficiario.html
@@ -1,1 +1,13 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
+   <script src="script.js"></script>  
+  <head>
+  <body>
+    <h1 class="sos">SOS-DoeAgora</h1>
 
+      <a href="{% url "doeagora:index" %}" class="link1"> Volte para página inicial </a><br>
+    
+  </body>
+</html>
