--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -24,11 +24,7 @@
 
     <hr>
 
-    <p>Doação para Beneficiários: </p>
-    <p><a href="{% url "doeagora:verlistagemdoacaobeneficiario" %}" class="link2"> Ver doações para beneficiários </a><br></p>
-    <hr>
-    
-    <p>Doação para Beneficiários: </p>
+    <p>interesse</p>
     <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link2"> interesses </a><br></p>
     <hr>
 
