--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -24,8 +24,12 @@
 
     <hr>
 
-    <p>interesse</p>
-    <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link2"> interesses </a><br></p>
+    <p> Interesses dos Beneficiários: </p>
+    <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link2"> Ver interesses </a><br></p>
+    <hr>
+
+    <p> Doações encaminhadas para Beneficiários: </p>
+    <p><a href="{% url "doeagora:verlistagemdoacaobeneficiario" %}" class="link2"> Ver doações encaminhadas </a><br></p>
     <hr>
 
     </h2>
