--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -18,6 +18,10 @@
     <p><a href="{% url "doeagora:c.beneficiario" %}" class="link2"> Cadastro de Beneficiários </a><br></p> 
   <hr>
 
+  <p>Interesses, clique aqui: </p>
+  <p><a href="{% url "doeagora:interesse" %}" class="link2">interesse </a><br></p> 
+<hr>
+
     <p>Se Você é um doador, ou seja, é aquele que irá ajudar outras pessoas doando produtos, clique aqui: </p>
     <p><a href="{% url "doeagora:c.doadores" %}" class="link2"> Cadastro de Doadores </a><br></p>
   <hr>
