--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -18,8 +18,8 @@
     <p><a href="{% url "doeagora:c.beneficiario" %}" class="link2"> Cadastro de Beneficiários </a><br></p> 
   <hr>
 
-  <p>Interesses, clique aqui: </p>
-  <p><a href="{% url "doeagora:interesse" %}" class="link2">interesse </a><br></p> 
+  <p>Caso você seja um benefeciário e tenha interesse em algum produto, clique aqui: </p>
+  <p><a href="{% url "doeagora:interesse" %}" class="link2"> Interesses em produtos   </a><br></p> 
 <hr>
 
     <p>Se Você é um doador, ou seja, é aquele que irá ajudar outras pessoas doando produtos, clique aqui: </p>
