--- a/doeagora/templates/doeagora/interesse.html
+++ b/doeagora/templates/doeagora/interesse.html
@@ -7,6 +7,14 @@
   <body>
     <h1 class="sos">SOS-DoeAgora</h1>
 
+    <div class="container">
+      <hr>
+      <h2>Cadastro de Doaçoes<cadastro></cadastro></h2>
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_ul }}
+    <input type="submit" value="Enviar">   
+</form>
 
     <hr>
     Caso você deseje colocar outros produtos, clique aqui para retornar a página de cadastros:
