--- a/doeagora/templates/doeagora/interesse.html
+++ b/doeagora/templates/doeagora/interesse.html
@@ -9,7 +9,7 @@
 
     <div class="container">
       <hr>
-      <h2>Cadastro de Doaçoes<cadastro></cadastro></h2>
+      <h2>Cadastro de Interesses<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
