--- a/doeagora/templates/doeagora/verlistagemdoacaobeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagemdoacaobeneficiario.html
@@ -9,10 +9,6 @@
 
     <h3 class="cd">
 
-  {% for beneficiario in beneficiarios %}
-  <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}" class= "link2">{{ beneficiario }}</a></p>
-  {% endfor %}
-    </h3>
-
+      <h2>Ainda fazer</h2>
 <p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
