--- a/doeagora/templates/doeagora/verinteresse.html
+++ b/doeagora/templates/doeagora/verinteresse.html
@@ -1,1 +1,20 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}"> 
+   <script src="script.js"></script>
+  <head>
+  <body>
+    <h1 class="listagens">SOS-Doe Agora</h1>
 
+    <h3 class="cd">
+
+    {{ interesse.nome }} ---> {{ interesse.produto }} ---> {{ interesse.quantidade }}
+
+    <p><a href="{% url 'doeagora:editar_interesse' interesse.pk %}" class="link1" > Editar </a></p>
+    <p><a href="{% url 'doeagora:excluir_interesse' interesse.pk %}" class="link1"> Excluir </a></p>
+  
+    </h3>
+    
+<p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
