--- a/doeagora/templates/doeagora/verlistageminteresses.html
+++ b/doeagora/templates/doeagora/verlistageminteresses.html
@@ -7,6 +7,11 @@
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
 
+    {% for beneficiario in beneficiarios %}
+    <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}" class= "link2">{{ beneficiario }}</a></p>
+    {% endfor %}
+      </h3>
+
 
 <p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
