--- a/doeagora/templates/doeagora/verlistageminteresses.html
+++ b/doeagora/templates/doeagora/verlistageminteresses.html
@@ -7,8 +7,8 @@
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
 
-    {% for beneficiario in beneficiarios %}
-    <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}" class= "link2">{{ beneficiario }}</a></p>
+    {% for interesse in interesses %}
+    <p><a href="{% url 'doeagora:ver_interesse'  interesse.pk %}" class= "link2">{{ interesse }}</a></p>
     {% endfor %}
       </h3>
 
