--- a/doeagora/templates/doeagora/verinteresse.html
+++ b/doeagora/templates/doeagora/verinteresse.html
@@ -9,7 +9,7 @@
 
     <h3 class="cd">
 
-    {{ beneficiario.nome }} ---> {{ interesse.produto }} ---> {{ interesse.quantidade }}
+ {{ interesse.produto }} ---> {{ interesse.quantidade }}
 
     <p><a href="{% url 'doeagora:editar_interesse' interesse.pk %}" class="link1" > Editar </a></p>
     <p><a href="{% url 'doeagora:excluir_interesse' interesse.pk %}" class="link1"> Excluir </a></p>
