--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -14,5 +14,9 @@
   {% endfor %}
     </h3>
 
+    <p> Produtos em que mais tem interesse: </p>
+    <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link2"> Ver interesses </a><br></p>
+    <hr>
+
 <p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
