--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -22,6 +22,10 @@
       <p><a href="{% url "doeagora:verlistagembeneficiario" %}" class="link2"> Ver beneficiários participantes </a><br></p>
     <hr>
 
+    <p> Doações: </p>
+    <p><a href="{% url "doeagora:verlistagemdoacao" %}" class="link2"> Ver doações arrecadadas </a><br></p>
+    <hr>
+
 
     </h2>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
