--- a/doeagora/templates/doeagora/doacao.html
+++ b/doeagora/templates/doeagora/doacao.html
@@ -14,7 +14,7 @@
 
      <div class="container">
       <hr>
-      <h2>Cadastro de Doaçoes<cadastro></cadastro></h2>
+      <h2>Cadastro de Doações<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
