--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -30,7 +30,7 @@
     <p><a href="{% url "doeagora:c.instituicao" %}" class="link2"> Cadastro de Instituições </a><br></p>
   <hr>
     
-    <p>Deseja fazer uma doação? Clique aqui: </p>
+    <p>Deseja fazer uma doação, ou seja, você é o doador e deseja realizar alguma doação, clique aqui: </p>
     <p><a href="{% url "doeagora:doacao" %}" class="link2"> Cadastro de Doações </a><br></p>
   <hr>
 
