--- a/doeagora/templates/doeagora/verdoacao.html
+++ b/doeagora/templates/doeagora/verdoacao.html
@@ -9,7 +9,8 @@
 
     <h3 class="cd">
 
-    {{ doacao.produto }} ---> {{ doacao.quantidade }}
+    {{ doador.nome }} ---> {{ doador.cpf}}
+    {{ doacao.nome }} ---> {{ doador.quantidade}}
 
     <p><a href="{% url 'doeagora:editar_doacao' doacao.pk %}" class="link1" > Editar </a></p>
     <p><a href="{% url 'doeagora:excluir_doacao' doacao.pk %}" class="link1"> Excluir </a></p>
