--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: yellow;
+    background: white;
     line-height: 1.0;
     width: 90%;
     margin: auto;
@@ -10,18 +10,18 @@ body{
   .editlist {
     color: black;
     text-align: center;
-    background: yellow;
+    background: white;
     width: 80%;
     font-family: 'Times New Roman', Times, serif;
 
   }
   .cadastros{
-    background: yellow;
+    background: white;
     text-align: center;
     font: outline;
   }
   .listagens{
-    background: yellow;
+    background: white;
     color: black;
     width: 100%;
     text-align: center; 
@@ -50,12 +50,12 @@ body{
     font-family: 'Times New Roman', Times, serif;
   }
   .social {
-    background: yellow;
+    background: white;
     
   }
   
   .doadores {
-    background: yellow;
+    background: white;
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
@@ -64,7 +64,7 @@ body{
     
   }
   .instituicao {
-    background: yellow;
+    background: white;
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
@@ -74,7 +74,7 @@ body{
   }
   
   .beneficiario{
-    background: yellow;
+    background: white;
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
@@ -83,7 +83,7 @@ body{
   }
 
   .login{ 
-    background: yellow;
+    background: white;
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
@@ -98,7 +98,7 @@ body{
   .link1 {
     color: black;
     font-size: 90%;
-    background: yellow;
+    background: white;
     text-align: center;
     font-family: OCR A Std, monospace;
   }
@@ -106,7 +106,7 @@ body{
   .link2 {
   color: black;
   font-size: 100%;
-  background: yellow;
+  background: white;
   font-family: OCR A Std, monospace; 
   }
   
@@ -115,14 +115,14 @@ body{
   color: black;
   font-size: 100%;
   font-family: cursive; 
-  background: yellow;
+  background: white;
   
   }
   
   .cd{
     color: white;
     width: 100%;
-    background: yellow;
+    background: white;
     text-align: center;
     font-size: 130%;
     font-family: OCR A Std, monospace; 
@@ -131,7 +131,7 @@ body{
   
   .fim{
     color: black;
-    background: yellow;
+    background: white;
     text-align: center;
     margin: auto;
     position:absolute;
