--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -6,6 +6,11 @@ body{
     font-family: OCR A Std, monospace; 
     color: black;
   }
+
+  .interesse{
+    color: black;
+
+  }
   
   .editlist {
     color: black;
