--- a/doeagora/templates/doeagora/interesse.html
+++ b/doeagora/templates/doeagora/interesse.html
@@ -10,7 +10,7 @@
     <div class="container">
       <hr>
       <h2>Cadastro de Interesses<cadastro></cadastro></h2>
-<form action="" method="post">
+<form action="" method="post" class="interesse">
     {% csrf_token %}
     {{ form.as_ul }}
     <input type="submit" value="Enviar">   
