--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -26,6 +26,9 @@
     <p><a href="{% url "doeagora:verlistagemdoacao" %}" class="link2"> Ver doações arrecadadas </a><br></p>
     <hr>
 
+    <p> Doações para beneficiários </p>
+    <p><a href="{% url "doeagora:verlistagemdoacaobeneficiario" %}" class="link2"> Ver doações arrecadadas </a><br></p>
+    <hr>
 
     </h2>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
