--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -27,7 +27,7 @@
     <hr>
 
     <p> Doações para beneficiários </p>
-    <p><a href="{% url "doeagora:verdoacaobeneficiario" %}" class="link2"> Ver doações arrecadadas </a><br></p>
+    <p><a href="{% url "doeagora:verlistagemdoacaobeneficiario" %}" class="link2"> Ver doações arrecadadas </a><br></p>
     <hr>
 
     </h2>
