--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -30,7 +30,7 @@
     <p><a href="{% url "doeagora:c.instituicao" %}" class="link2"> Cadastro de Instituições </a><br></p>
   <hr>
        <p>Se Você é uma instituição, ou seja, será responsável por receber as doações e encaminha-las aos beneficiários, clique aqui: </p>
-    <p><a href="{% url "doeagora:d.beneficiario" %}" class="link2"> Cadastro de Doações para os Beneficiários </a><br></p>
+    <p><a href="{% url "doeagora:doacaobeneficiario" %}" class="link2"> Cadastro de Doações para os Beneficiários </a><br></p>
   <hr>
     
     <p>Deseja fazer uma doação, ou seja, você é o doador e deseja realizar alguma doação, clique aqui: </p>
