--- a/doeagora/templates/doeagora/verdoacaobeneficiario.html
+++ b/doeagora/templates/doeagora/verdoacaobeneficiario.html
@@ -6,11 +6,11 @@
   <head>
   <body>
     <h1 class="sos">SOS-DoeAgora</h1>
-  {{ doacao }}
+
     {{ doacao.produto }} ---> {{ doacao.beneficiario.nome }}
 
-    {# <p><a href="{% url 'doeagora:editar_doacao_beneficiario' doacao.pk %}" class="link1" > Editar </a></p> #}
-    {# <p><a href="{% url 'doeagora:excluir_doacao_beneficiario' doacao.pk %}" class="link1"> Excluir </a></p> #}
+    <p><a href="{% url 'doeagora:editar_doacao_beneficiario' doacao.pk %}" class="link1" > Editar </a></p>
+    <p><a href="{% url 'doeagora:excluir_doacao_beneficiario' doacao.pk %}" class="link1"> Excluir </a></p>
     
     </h3>
 
