--- a/doeagora/templates/doeagora/verdoacaobeneficiario.html
+++ b/doeagora/templates/doeagora/verdoacaobeneficiario.html
@@ -5,7 +5,7 @@
    <script src="script.js"></script>  
   <head>
   <body>
-    <h1 class="sos">SOS-DoeAgora</h1>
+    <h1 class="listagem">SOS-DoeAgora</h1>
 
     {{ doacao.produto }} ---> {{ doacao.beneficiario.nome }}
 
