--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -26,10 +26,10 @@
     <p><a href="{% url "doeagora:c.doadores" %}" class="link2"> Cadastro de Doadores </a><br></p>
   <hr>
 
-    <p>Se Você é uma instituição, ou seja, será responsável por receber as doações e encaminha-las aos beneficiários, clique aqui: </p>
+    <p>Se Você é uma instituição, ou seja, será responsável por receber as doações, clique aqui: </p>
     <p><a href="{% url "doeagora:c.instituicao" %}" class="link2"> Cadastro de Instituições </a><br></p>
   <hr>
-       <p>Se Você é uma instituição, ou seja, será responsável por receber as doações e encaminha-las aos beneficiários, clique aqui: </p>
+       <p>Se Você é uma instituição, ou seja, será responsável por receber as doações arrecadadas e encaminha-las aos beneficiários, clique aqui: </p>
     <p><a href="{% url "doeagora:doacaobeneficiario" %}" class="link2"> Cadastro de Doações para os Beneficiários </a><br></p>
   <hr>
     
