--- a/doeagora/templates/doeagora/c.instituicao.html
+++ b/doeagora/templates/doeagora/c.instituicao.html
@@ -11,6 +11,7 @@
   </head>
 
   <body class="instituicao">
+      <h1 class="sos">SOS-DoeAgora</h1>
     
      <div class="container">
       <hr>
