--- a/doeagora/templates/doeagora/verdoacaobeneficiario.html
+++ b/doeagora/templates/doeagora/verdoacaobeneficiario.html
@@ -9,7 +9,7 @@
 
     <h3 class="cd">
 
-  {{doacao.produto}} ---> {{doacao.doador.nome}}
+  {{doacao.produto}} ---> {{doacao.beneficiario.nome}}
     
     <p><a href="{% url 'doeagora:editar_doacao_beneficiario' doacao.pk %}" class="link1" > Editar </a></p>
     <p><a href="{% url 'doeagora:excluir_doacao_beneficiario' doacao.pk %}" class="link1"> Excluir </a></p>
