--- a/doeagora/templates/doeagora/verlistageminteresses.html
+++ b/doeagora/templates/doeagora/verlistageminteresses.html
@@ -8,7 +8,7 @@
     <h1 class="sos">SOS-Doe Agora</h1>
 
     {% for interesse in interesses %}
-    <p><a href="{% url 'doeagora:ver_interesse'  interesse.pk %}" class= "link2">{{ interesse }}</a></p>
+    <p><a href="{% url 'doeagora:ver_interesse'  interesse.pk %}" class= "link2">{{ interesse.beneficiario }}</a></p>
     {% endfor %}
       </h3>
 
