--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -4,7 +4,7 @@ body{
     width: 90%;
     margin: auto;
     font-family: OCR A Std, monospace; 
-    color: black;
+    color: white;
   }
 
   .interesse{
