--- a/doeagora/templates/doeagora/verlistagemdoacao.html
+++ b/doeagora/templates/doeagora/verlistagemdoacao.html
@@ -10,7 +10,8 @@
     <h3 class="cd">
 
   {% for doacao in doacoes %}
-  <p><a href="{% url 'doeagora:ver_doacao'  doacao.pk %}" class= "link2">{{ doacao.produto }} - {{doacao.doador}}</a></p>
+  <p><a href="{% url 'doeagora:ver_doacao'  doacao.pk %}" class= "link2">Produto: {{ doacao.produto}}
+     | Doador: {{doacao.doador}} | Quantidade: {{doacao.quantidade}}</a></p>
   {% endfor %}
     </h3>
 
