--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -14,7 +14,7 @@
   {% endfor %}
     </h3>
 
-    <p> Produtos em que mais tem interesse: </p>
+    <p> Interesses de beneficiários em produtos: </p>
     <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link1"> Ver interesses </a><br></p>
     <hr>
 
