--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -1,10 +1,10 @@
 body{
-    background: white;
+    background: rgb(3, 190, 181);
     line-height: 1.0;
     width: 90%;
     margin: auto;
     font-family: OCR A Std, monospace; 
-    color: blueviolet;
+    color: white;
   }
 
   .interesse{
