--- a/doeagora/templates/doeagora/c.doadores.html
+++ b/doeagora/templates/doeagora/c.doadores.html
@@ -7,7 +7,9 @@
     <title>SOS-DoeAgora</title>
     <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
     <script src="script.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
+    crossorigin="anonymous">
   </head>
   
   <body class="beneficiario">
@@ -18,8 +20,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
-    <input type="submit" value="Enviar">
-    
+    <input type="submit" value="Enviar">  
 </form>
 <hr>
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
