--- a/doeagora/templates/doeagora/interesse.html
+++ b/doeagora/templates/doeagora/interesse.html
@@ -7,11 +7,12 @@
     <title>SOS-DoeAgora</title>
     <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
     <script src="script.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
+    crossorigin="anonymous">
   </head>
 
   <body class="interesse">
-
      <div class="container">
       <hr>
       <h2>Cadastro de Interesses<cadastro></cadastro></h2>
@@ -22,9 +23,7 @@
 </form>
 <hr>
     Caso você deseje colocar outros produtos, clique aqui para retornar a página de cadastros:
-    <p><a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Volte a página de cadastros </a></p>
-       
+    <p><a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Volte a página de cadastros </a></p>   
       <a href="{% url "doeagora:index" %}" class="link1"> Volte para a página inicial</a><br>
-    
   </body>
 </html>
