--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -14,8 +14,8 @@
   {% endfor %}
     </h3>
 
-    <p> Interesses de beneficiários em produtos: </p>
-    <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link1"> Ver interesses </a><br></p>
+    <p class="interesse"> Produtos em que mais tem interesse: </p>
+    <p><a href="{% url "doeagora:verlistageminteresses" %}" class="link2"> Ver interesses </a><br></p>
     <hr>
 
 <p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
